# ddfacet-kernels

./: README.rst  conftest.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml
gen-test-data/: gen_test_data.py
src/ddfacet_kernels/: __init__.py
src/ddfacet_kernels/apps/: gen_test_data.py  test-requirements.txt
src/ddfacet_kernels/tests/: conftest.py  test_kernels.py
tests/: test_kernels.py
